--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title>getPasswordOfO</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <div id="view">success</div>
+        <div class="container-fluid">
+            <div class="row">
+                <form>
+                    <div id="wrapper" class="form-group">
+                        <label for="id">车牌号：</label>
+                        <input id="id" class="form-control" type="text" name="id">
+                        <span id="error" class="help-block">车牌号不能为空！</span>
+                        <button id="search" class="btn btn-success btn-lg btn-block" type="button">查看密码</button>
+                    </div>
+                </form>
+                <p id="pwd" class="pwd text-center·"></p>
+            </div>
+        </div>
+
+        <script src="js/app.js" charset="utf-8"></script>
     </body>
 </html>
