--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <button id="search" class="btn btn-success btn-lg btn-block" type="button">查看密码</button>
                     </div>
                 </form>
-                <p id="pwd" class="pwd text-center·"></p>
+                <p id="pwd" class="pwd text-center"></p>
             </div>
         </div>
 
