--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div id="wrapper" class="form-group">
                     <label for="id">车牌号：</label>
                     <input id="id" class="form-control" type="text" name="id">
                     <span id="error" class="help-block">车牌号不能为空！</span>
+                    <p id="pwd" class="pwd text-center"></p>
                     <button id="search" class="btn btn-success btn-lg btn-block" type="button">查看密码</button>
                 </div>
-                <p id="pwd" class="pwd text-center"></p>
             </div>
         </div>
 
