--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container col-sm-12">
             <div class="row">
                 <div id="wrapper" class="form-group">
                     <label for="id">车牌号：</label>
