--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <div class="container col-sm-12">
-            <div class="row">
+        <div class="container">
+            <div class="row col-sm-12">
                 <div id="wrapper" class="form-group">
                     <label for="id">车牌号：</label>
                     <input id="id" class="form-control" type="text" name="id">
