--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <title>getPasswordOfO</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/app.css">
-    </head>
-    <body>
-        <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-8">
-            <div class="row">
-                <div id="wrapper" class="form-group">
-                    <label for="id">车牌号：</label>
-                    <input id="id" class="form-control" type="text" name="id">
-                    <span id="error" class="help-block">车牌号不能为空！</span>
-                    <p id="pwd" class="pwd text-center"></p>
-                    <button id="search" class="btn btn-success btn-lg btn-block" type="button">查看密码</button>
-                </div>
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <title>getPasswordOfO</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina.png">
+</head>
+
+<body>
+    <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-8">
+        <div class="row">
+            <div id="wrapper" class="form-group">
+                <label for="id">车牌号：</label>
+                <input id="id" class="form-control" type="text" name="id">
+                <span id="error" class="help-block">车牌号不能为空！</span>
+                <p id="pwd" class="pwd text-center"></p>
+                <button id="search" class="btn btn-success btn-lg btn-block" type="button">查看密码</button>
             </div>
         </div>
+    </div>
 
-        <script src="js/app.js" charset="utf-8"></script>
-    </body>
+    <script src="js/app.js" charset="utf-8"></script>
+</body>
+
 </html>
