--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>getPasswordOfO</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-retina.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina.png">
+    <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/touch-icon-ipad-retina.png">
 </head>
 
 <body>
